welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: identifier expected but integer literal found.
  var x = t[0]
            ^Array1:23: error: ']' expected but ';' found.
  for(i<-1 to 5 ){
^Array1:25: error: ';' expected but '=' found.
    t[i] = t[i-1];
         ^Array1:26: error: identifier expected but integer literal found.
    t[i-1] = x;
        ^Array1:26: error: ']' expected but ';' found.
    t[i-1] = x;
              ^Array1:28: error: identifier expected but integer literal found.
  x = t[5]
        ^Array1:29: error: ']' expected but ';' found.
  t[0]=t[5]
^Array1:29: error: identifier expected but integer literal found.
  t[0]=t[5]
    ^Array1:30: error: ']' expected but ';' found.
  t[5]=x
^Array1:30: error: identifier expected but integer literal found.
  t[5]=x
    ^Array1:31: error: ']' expected but '}' found.
}
^